--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-transition-group": "^4.4.0",
-    "@types/storybook__addon-info": "^5.2.1",
     "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -53,6 +52,8 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.0.0",
-    "@storybook/react": "^5.3.19"
+    "@storybook/react": "^5.3.19",
+    "@types/storybook__addon-info": "^5.2.1",
+    "react-docgen-typescript-loader": "^3.7.2"
   }
 }
