--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "turing-react-ant",
   "version": "0.1.0",
   "private": true,
+  "main": "build/index.js",
+  "module": "build/index.js",
+  "types": "build/index.d.ts",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -28,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "clean": "rimraf ./build",
-    "build": "npm run build-ts && npm run build-css",
+    "build": "npm run clean && npm run build-ts && npm run build-css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build-ts": "tsc -p tsconfig.build.json",
