--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,13 @@ cache:
   - node_modules
 env:
   - CI=true
+script:
+  - npm run build-storybook
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  # keep_history: true
+  local_dir: stroybook-static
+  on:
+    branch: master
