--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build-css": "node-sass ./src/styles/index.scss ./dist/index.css",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "prepublishOnly": "npm run test:nowatch && npm run lint && npm run build"
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
